# dp_hack_the_ice

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.yml  jupyter_dp.ipynb  pyproject.toml
airflow/: docker-compose.yaml
etl/: etl.ipynb  main.py  spark.py
etl/extract/: load_data.py
etl/trasform/: transform_data.py
prediction/: main.py  spark.py
tests/spark/: test_main.py
