[tool.poetry]
name = "prediction"
version = "0.1.0"
description = "prediction PySpark"
authors = ["WillAge willagegg@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "==3.5.3"
pandas = "^2.2.3"
kagglehub = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
